--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             width: 100px;
             height: 300px;
             background-color: blue;
+            position: relative;
+            top: 0%;
+            height: 0%;
         }
     </style>
 </head>
